<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="#F1EAEA"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_baseline_info_24"
            android:contentDescription="@string/info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/kindly_ensure_you_are_in_a_noise_free_environment_while_recording"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />


        <Button
            android:id="@+id/dismiss_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#656363"
            android:text="@string/dismiss" />


    </LinearLayout>


</androidx.cardview.widget.CardView>