<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:id="@+id/item_layout"
    android:background="#F4F1EF"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_record_voice_over_24"
            android:contentDescription="@string/voice_item" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:layout_gravity="center_vertical"
            android:text="@string/title"
            android:id="@+id/title_audio"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_delete_24"
            android:id="@+id/delete_command"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/delete_btn" />

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_margin="5dp"
        android:background="#879BBC"/>



</LinearLayout>