<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:backgroundTint="#854868"
app:cardCornerRadius="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="3dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/your_voice"
        android:textColor="#fff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/play_pause_btn_your_voice"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/play_btn" />

        <SeekBar
            android:id="@+id/seekbar_audio_your_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:thumbTint="#BCB0F1" />
    </LinearLayout>

    <Button
        android:id="@+id/dismiss_your_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#CCCDCD"
        android:text="@string/dismiss1"
        android:textColor="#000" />
</LinearLayout>

</androidx.cardview.widget.CardView>

    <?xml version="1.0" encoding="utf-8"?>

