<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Voice_Input">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:backgroundTint="#EDB8B8"
            android:elevation="0dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#000"
                    android:text="@string/record_your_voice_for_training"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:letterSpacing="0.1"
            android:textColor="#000"
            android:id="@+id/paragraph"
            android:textStyle="italic"
            android:layout_gravity="center_vertical|end"
            android:text="@string/paragraph_pets"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_record_your_voice"
                android:backgroundTint="#5FA9C6"
                android:layout_margin="5dp"
                android:text="@string/record"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/stop_record_your_voice"
                android:layout_height="wrap_content"
                android:backgroundTint="#AC5468"
                android:layout_margin="5dp"
                android:text="@string/stop"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:id="@+id/chronometer_your_voice"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>





</FrameLayout>