<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.text_to_Speech">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:backgroundTint="#8EBFE4"
            android:elevation="0dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/text_to_speech"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#F4F4F4"
            android:elevation="0dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/command_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/title_to_be_saved"
                        android:textColor="#000"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/command_to_be_sent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/enter_your_command"
                        android:textColor="#000"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/start_converion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#5847A5"
                    android:text="Start Conversion" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:indeterminateTint="#AF30A2"
            android:visibility="gone" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:backgroundTint="#404C8A"
        android:id="@+id/layout_bottom_converted"
        app:cardCornerRadius="5dp"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/comand_title_bottom_converted"
                android:layout_margin="3dp"
                android:fontFamily="@font/montserrat"
                android:textColor="#fff" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/play_pause_btn_converted"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_baseline_play_arrow_24"
                    android:contentDescription="@string/play_btn" />

                <SeekBar
                    android:id="@+id/seekbar_audio_converted"
                    android:layout_width="200dp"
                    android:thumbTint="#BCB0F1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/send_convert"
                    android:backgroundTint="#D1A2A2"
                    android:textColor="#2E0D57"
                    android:text="@string/send">
                </Button>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>